--- a/candy.html
+++ b/candy.html
@@ -1,233 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clinic Booking Form</title>
+    <title>Candy Auto Sender</title>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <style>
       body {
-        font-family: Arial, sans-serif;
-        background: #f4f4f4;
+        font-family: Arial;
+        background: #111;
+        color: #0f0;
         padding: 20px;
       }
-      .form-wrapper {
-        max-width: 450px;
-        margin: auto;
-        background: white;
-        padding: 25px;
-        border-radius: 12px;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      }
-      h2 {
-        text-align: center;
-        margin-bottom: 25px;
-      }
-      input,
-      select,
-      button {
-        width: 100%;
-        padding: 12px;
-        margin: 10px 0;
-        border-radius: 6px;
-        border: 1px solid #ccc;
-        font-size: 16px;
-        box-sizing: border-box;
-      }
-      button {
-        background-color: #0077ff;
-        color: white;
-        font-size: 17px;
-        border: none;
-        cursor: pointer;
-        position: relative;
-      }
-      button:hover {
-        background-color: #005ad1;
-      }
-      button:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
-      }
-      .spinner {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        border: 2px solid #ffffff;
-        border-top: 2px solid transparent;
-        border-radius: 50%;
-        animation: spin 0.8s linear infinite;
-        vertical-align: middle;
-        margin-left: 8px;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-      #status {
-        text-align: center;
-        margin-top: 15px;
-        font-weight: bold;
-      }
-      .success {
-        color: #28a745;
-      }
-      .error {
-        color: #dc3545;
-      }
-      .info {
-        color: #0077ff;
+      .log-box {
+        background: #000;
+        padding: 15px;
+        border-radius: 8px;
+        height: 400px;
+        overflow-y: auto;
+        border: 1px solid #333;
       }
     </style>
   </head>
+
   <body>
-    <div class="form-wrapper">
-      <h2>Book Your Appointment</h2>
-      <form id="bookingForm">
-        <input type="text" id="name" placeholder="Full Name" required />
-        <input type="text" id="phone" placeholder="Phone Number" required />
-        <select id="service" required>
-          <option value="">Select Service</option>
-          <option value="تنظيف">تنظيف</option>
-          <option value="حشو">حشو</option>
-          <option value="تقويم">تقويم</option>
-          <option value="تبييض">تبييض</option>
-        </select>
-        <input
-          type="text"
-          id="contactTime"
-          placeholder="Preferred Contact Time (e.g. 7pm-10pm)"
-          required
-        />
-        <button type="submit" id="submitBtn">Submit</button>
-      </form>
-      <p id="status"></p>
-    </div>
+    <h2>🍬 Candy Auto WhatsApp Sender</h2>
+    <p>Listening for new rows in <b>web_bookings</b>. Keep this page open.</p>
+
+    <div class="log-box" id="log"></div>
+
     <script>
+      // -------------------------------------------------------
+      // SUPABASE CONFIG
+      // -------------------------------------------------------
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
-      const SUPABASE_ANON_KEY =
+      const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
 
-      // WhatsApp recipient number (format: country code + number, no + or spaces)
-      const WHATSAPP_RECIPIENT = "962785050875";
+      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      function updateStatus(message, type = "info") {
-        const statusEl = document.getElementById("status");
-        statusEl.innerText = message;
-        statusEl.className = type;
+      // -------------------------------------------------------
+      // LOGGER
+      // -------------------------------------------------------
+      function log(msg) {
+        const box = document.getElementById("log");
+        const time = new Date().toLocaleTimeString("ar-EG");
+        box.innerHTML += `<div>[${time}] ➤ ${msg}</div>`;
+        box.scrollTop = box.scrollHeight;
       }
 
-      function setButtonLoading(isLoading) {
-        const btn = document.getElementById("submitBtn");
-        if (isLoading) {
-          btn.disabled = true;
-          btn.innerHTML = 'Processing... <span class="spinner"></span>';
-        } else {
-          btn.disabled = false;
-          btn.innerHTML = "Submit";
+      // -------------------------------------------------------
+      // WHATSAPP SENDER (same as offers.html)
+      // -------------------------------------------------------
+      async function sendWhatsAppMessage(messageText) {
+        try {
+          const payload = {
+            name: "Smile Clinic",
+            phone: "962785050875", // EXACT NUMBER
+            service: "New Booking",
+            appointment: messageText,
+            image: null,
+          };
+
+          log("📤 Sending WhatsApp message...");
+
+          const res = await fetch(
+            "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
+            {
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify(payload),
+            }
+          );
+
+          const data = await res.json();
+
+          if (data.success) {
+            log("✅ WhatsApp sent successfully!");
+          } else {
+            log("❌ WhatsApp failed: " + JSON.stringify(data));
+          }
+        } catch (err) {
+          log("❌ ERROR sending message: " + err.message);
         }
       }
 
-      async function saveToSupabase(data) {
-        const response = await fetch(`${SUPABASE_URL}/rest/v1/web_bookings`, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            apikey: SUPABASE_ANON_KEY,
-            Authorization: `Bearer ${SUPABASE_ANON_KEY}`,
-            Prefer: "return=minimal",
-          },
-          body: JSON.stringify(data),
-        });
+      // -------------------------------------------------------
+      // REALTIME LISTENER FOR NEW BOOKINGS
+      // -------------------------------------------------------
+      supabase
+        .channel("booking-auto-sender")
+        .on(
+          "postgres_changes",
+          { event: "INSERT", schema: "public", table: "web_bookings" },
+          (payload) => {
+            log("🎉 NEW BOOKING ADDED!");
 
-        if (!response.ok) {
-          throw new Error("Failed to save to database");
-        }
-        return true;
-      }
+            const row = payload.new;
+            log(`👤 Name: ${row.name}`);
+            log(`📞 Phone: ${row.phone}`);
+            log(`🦷 Service: ${row.service}`);
 
-      function sendWhatsAppMessage(phone, name, service, contactTime) {
-        // Format the message
-        const message =
-          `🏥 *New Appointment Booking*\n\n` +
-          `👤 Name: ${name}\n` +
-          `📞 Phone: ${phone}\n` +
-          `🦷 Service: ${service}\n` +
-          `⏰ Preferred Time: ${contactTime}\n\n` +
-          `Please confirm the appointment.`;
+            const msg =
+              `📢 عميل جديد من الموقع:\n` +
+              `👤 الاسم: ${row.name}\n` +
+              `📞 الهاتف: ${row.phone}\n` +
+              `💊 الخدمة: ${row.service}`;
 
-        // Encode the message for URL
-        const encodedMessage = encodeURIComponent(message);
-
-        // Create WhatsApp Web URL
-        const whatsappUrl = `https://wa.me/${WHATSAPP_RECIPIENT}?text=${encodedMessage}`;
-
-        // Open WhatsApp in new tab
-        window.open(whatsappUrl, "_blank");
-
-        return true;
-      }
-
-      document
-        .getElementById("bookingForm")
-        .addEventListener("submit", async function (e) {
-          e.preventDefault();
-
-          // Get form data
-          const name = document.getElementById("name").value.trim();
-          const phone = document.getElementById("phone").value.trim();
-          const service = document.getElementById("service").value;
-          const contactTime = document
-            .getElementById("contactTime")
-            .value.trim();
-
-          // Validate all fields
-          if (!name || !phone || !service || !contactTime) {
-            updateStatus("⚠️ Please fill all fields!", "error");
-            return;
+            sendWhatsAppMessage(msg);
           }
+        )
+        .subscribe();
 
-          // Set loading state
-          setButtonLoading(true);
-          updateStatus("📤 Saving booking...", "info");
-
-          try {
-            // Prepare data for Supabase
-            const data = {
-              name: name,
-              phone: phone,
-              service: service,
-              contact_time: contactTime,
-            };
-
-            // Step 1: Save to Supabase
-            await saveToSupabase(data);
-            updateStatus("✔ Booking saved! Opening WhatsApp...", "success");
-
-            // Small delay to show success message
-            await new Promise((resolve) => setTimeout(resolve, 500));
-
-            // Step 2: Send WhatsApp message
-            sendWhatsAppMessage(phone, name, service, contactTime);
-
-            // Update final status
-            updateStatus("✔ Booking saved & WhatsApp opened!", "success");
-
-            // Reset form after 2 seconds
-            setTimeout(() => {
-              document.getElementById("bookingForm").reset();
-              updateStatus("", "");
-            }, 2000);
-          } catch (error) {
-            console.error("Error:", error);
-            updateStatus("❌ Error: " + error.message, "error");
-          } finally {
-            setButtonLoading(false);
-          }
-        });
+      log("👂 Candy Auto Sender is running... waiting for new rows.");
     </script>
   </body>
 </html>
