--- a/booking.html
+++ b/booking.html
@@ -118,7 +118,7 @@
         width: 400px;
         max-height: 70vh;
         overflow-y: auto;
-        color: #222; /* readable on white */
+        color: #222;
       }
 
       .modal-content h3 {
@@ -127,21 +127,19 @@
         margin-top: 0;
       }
 
-      /* ✅ Dark mode fixes */
       body.dark .modal-content {
         background: #222;
-        color: #e5e7eb; /* light gray text for readability */
+        color: #e5e7eb;
       }
 
       body.dark .modal-content h3 {
-        color: #b48cf0; /* soft purple to match dark theme */
+        color: #b48cf0;
       }
 
-      /* ✅ Table + general dark text fix */
       body.dark table,
       body.dark th,
       body.dark td {
-        color: #d1d5db; /* balanced light gray text */
+        color: #d1d5db;
         border-color: #333;
       }
 
@@ -178,12 +176,10 @@
             جدول التواصل
           </a>
 
-          <!-- ✅ NEW MENU ITEM ADDED HERE -->
           <a href="contactlist.html">
             <i class="fa-solid fa-address-book"></i>
             قائمة التواصل
           </a>
-          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
@@ -222,6 +218,7 @@
               <option value="Still">قيد الانتظار</option>
               <option value="Booking Complete">تم الحجز</option>
               <option value="SentNoReply">تم الإرسال ولم يتم الرد</option>
+              <option value="Canceled By User">ملغي من المستخدم</option>
             </select>
 
             <table id="tbl">
@@ -427,6 +424,9 @@
                   <option value="SentNoReply" ${
                     b.status === "SentNoReply" ? "selected" : ""
                   }>تم الإرسال ولم يتم الرد</option>
+                  <option value="Canceled By User" ${
+                    b.status === "Canceled By User" ? "selected" : ""
+                  }>ملغي من المستخدم</option>
                 </select>
                 <button class="history-btn" data-id="${b.id}">
                   <i class="fa-solid fa-clock-rotate-left"></i> السجل
@@ -443,7 +443,7 @@
             const id = e.target.dataset.id;
             const newStatus = e.target.value;
             const booking = allData[index];
-            const oldStatus = booking.status; // Capture old status before updating
+            const oldStatus = booking.status;
 
             allData[index].status = newStatus;
             await updateStatus(id, newStatus, oldStatus);
@@ -470,7 +470,6 @@
           return;
         }
 
-        // Normalize both sides
         const filtered = allData.filter((b) => {
           const status = (b.status || "").trim().toLowerCase();
           return status === val.trim().toLowerCase();
@@ -551,7 +550,6 @@
       });
 
       // ✅ Auto refresh bookings
-      // ✅✅✅✅✅
       load();
       setInterval(load, 15000);
     </script>
