--- a/booking.html
+++ b/booking.html
@@ -178,13 +178,10 @@
             جدول التواصل
           </a>
 
-          <!-- ✅ NEW MENU ITEM ADDED HERE -->
           <a href="contactlist.html">
             <i class="fa-solid fa-address-book"></i>
             قائمة التواصل
           </a>
-          <!-- ✅ END NEW ITEM -->
-
           <a href="AIsettings.html">
             <i class="fa-solid fa-robot"></i>
             إعدادات الذكاء الاصطناعي
@@ -222,6 +219,7 @@
               <option value="Still">قيد الانتظار</option>
               <option value="Booking Complete">تم الحجز</option>
               <option value="SentNoReply">تم الإرسال ولم يتم الرد</option>
+              <option value="Canceled">ملغى/محذوف</option>
             </select>
 
             <table id="tbl">
@@ -249,7 +247,6 @@
       </main>
     </div>
 
-    <!-- ✅ History Modal -->
     <div id="historyModal" class="modal">
       <div class="modal-content">
         <h3>سجل التعديلات</h3>
@@ -351,6 +348,7 @@
         indicator.style.display = "inline";
         addDebugLog(`بدء إرسال تذكير للعميل ${booking.name}`);
 
+        // NOTE: The provided code uses a hardcoded test phone, you should use booking.phone in production
         const testPhone = "962781685210";
 
         const payload = {
@@ -427,6 +425,9 @@
                   <option value="SentNoReply" ${
                     b.status === "SentNoReply" ? "selected" : ""
                   }>تم الإرسال ولم يتم الرد</option>
+                  <option value="Canceled" ${
+                    b.status === "Canceled" ? "selected" : ""
+                  }>ملغى/محذوف</option>
                 </select>
                 <button class="history-btn" data-id="${b.id}">
                   <i class="fa-solid fa-clock-rotate-left"></i> السجل
