--- a/analytics.html
+++ b/analytics.html
@@ -102,7 +102,6 @@
     </div>
 
     <script>
-      // ======= SUPABASE CONNECTION =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -112,19 +111,19 @@
       let allData = [];
       const q = (s) => document.querySelector(s);
 
+      // LOAD BOOKINGS (SAME AS BOOKING.HTML)
       async function load() {
-        // ✅ LOAD FROM SUPABASE DATABASE
         const { data, error } = await supabase
           .from("bookings")
           .select("*")
           .order("time", { ascending: false });
 
         if (error) {
-          console.error("Error loading analytics data:", error);
+          console.error(error);
           return;
         }
 
-        allData = data || [];
+        allData = data;
         drawCharts(allData);
       }
 
