--- a/notifications.html
+++ b/notifications.html
@@ -317,7 +317,19 @@
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+      const supabaseClient = window.supabase.createClient(
+        SUPABASE_URL,
+        SUPABASE_KEY
+      );
+
+      // 🔐 AUTH GUARD (RUN ON PAGE LOAD)
+      if (localStorage.getItem("clinic_logged_in") !== "true") {
+        document.getElementById("loginScreen").style.display = "flex";
+        document.getElementById("dashboardContent").style.display = "none";
+      } else {
+        document.getElementById("loginScreen").style.display = "none";
+        document.getElementById("dashboardContent").style.display = "block";
+      }
 
       let allBookings = [];
       let filteredBookings = [];
@@ -329,7 +341,7 @@
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
 
-        const { data, error } = await supabase
+        const { data, error } = await supabaseClient
           .from("admin_auth")
           .select("*")
           .eq("email", email)
@@ -367,7 +379,7 @@
       async function loadNotifications() {
         try {
           // ✅ LOAD DIRECTLY FROM SUPABASE DATABASE
-          const { data, error } = await supabase
+          const { data, error } = await supabaseClient
             .from("bookings")
             .select("*")
             .order("time", { ascending: false });
