--- a/analytics.html
+++ b/analytics.html
@@ -105,15 +105,18 @@
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+      const supabaseClient = window.supabase.createClient(
+        SUPABASE_URL,
+        SUPABASE_KEY
+      );
 
-      let bar, pie, line;
+      let bar, pie;
       let allData = [];
       const q = (s) => document.querySelector(s);
 
       // LOAD BOOKINGS (SAME AS BOOKING.HTML)
       async function load() {
-        const { data, error } = await supabase
+        const { data, error } = await supabaseClient
           .from("bookings")
           .select("*")
           .order("time", { ascending: false });
@@ -135,7 +138,6 @@
 
         if (bar) bar.destroy();
         if (pie) pie.destroy();
-        if (line) line.destroy();
 
         bar = new Chart(q("#bar"), {
           type: "bar",
