--- a/booking.html
+++ b/booking.html
@@ -185,13 +185,18 @@
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+      // ✅ FIXED: Using supabaseClient instead of supabase to match dashboard.html
+      const supabaseClient = window.supabase.createClient(
+        SUPABASE_URL,
+        SUPABASE_KEY
+      );
 
       let allData = [];
 
       // LOAD BOOKINGS (REAL STATUS)
       async function load() {
-        const { data, error } = await supabase
+        const { data, error } = await supabaseClient
           .from("bookings")
           .select("*")
           .order("time", { ascending: false });
@@ -207,12 +212,12 @@
 
       // UPDATE STATUS
       async function updateStatus(id, newStatus, oldStatus) {
-        await supabase
+        await supabaseClient
           .from("bookings")
           .update({ status: newStatus })
           .eq("id", id);
 
-        await supabase.from("booking_history").insert([
+        await supabaseClient.from("booking_history").insert([
           {
             booking_id: id,
             old_status: oldStatus,
@@ -299,7 +304,22 @@
       const themeToggle = document.getElementById("themeToggle");
       themeToggle.addEventListener("click", () => {
         document.body.classList.toggle("dark");
+        const icon = themeToggle.querySelector("i");
+        if (document.body.classList.contains("dark")) {
+          icon.classList.replace("fa-moon", "fa-sun");
+          localStorage.setItem("clinic_theme", "dark");
+        } else {
+          icon.classList.replace("fa-sun", "fa-moon");
+          localStorage.setItem("clinic_theme", "light");
+        }
       });
+
+      // Apply saved theme on load
+      if (localStorage.getItem("clinic_theme") === "dark") {
+        document.body.classList.add("dark");
+        const icon = themeToggle.querySelector("i");
+        icon.classList.replace("fa-moon", "fa-sun");
+      }
 
       // SIDEBAR TOGGLE
       document.getElementById("menuToggle").addEventListener("click", () => {
